- Create Images Folder In Project

--- a/InstagramDesktopUi/InstagramDesktopUi.csproj
+++ b/InstagramDesktopUi/InstagramDesktopUi.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
